Functions and messing around with dog breed data

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -279,60 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Breed\n",
-      "Akita                              True\n",
-      "Alaskan Malamute                   True\n",
-      "American Staffordshire Terrier     True\n",
-      "Australian Shepherd                True\n",
-      "Australian Kelpie                  True\n",
-      "                                  ...  \n",
-      "Staffordshire Bull Terrier        False\n",
-      "Welshi Corgi                      False\n",
-      "West Highland White Terrier       False\n",
-      "Whippet                           False\n",
-      "Yorkshire Terrier                 False\n",
-      "Name: Weight, Length: 73, dtype: bool\n",
-      "                                Weight\n",
-      "Breed                                 \n",
-      "Akita                             40.0\n",
-      "Alaskan Malamute                  40.0\n",
-      "American Staffordshire Terrier    30.0\n",
-      "Australian Shepherd               20.0\n",
-      "Australian Kelpie                 20.0\n",
-      "Australian Cattle Dog             22.0\n",
-      "Basset Hound                      22.0\n",
-      "Bernese Mountain Dog              40.0\n",
-      "Bloodhound                        58.0\n",
-      "Border Collie                     20.0\n",
-      "Boxer                             30.0\n",
-      "British Bulldog                   21.0\n",
-      "Bull Terrier                      25.0\n",
-      "Bullmastiff                       50.0\n",
-      "Chow Chow                         25.0\n",
-      "Collie                            25.0\n",
-      "Dalmatian                         27.0\n",
-      "Dobermann                         35.0\n",
-      "Foxhound                          32.0\n",
-      "German Shepherd                   36.0\n",
-      "Golden Retriever                  32.0\n",
-      "Greyhound                         29.0\n",
-      "Irish Setter                      30.0\n",
-      "Labrador Retriever                35.0\n",
-      "Mastiff                           80.0\n",
-      "Old English Sheepdog              32.0\n",
-      "Standard Poodle                   25.0\n",
-      "Rottweiler                        45.0\n",
-      "Samoyed                           25.0\n",
-      "Giant Schnauzer                   43.0\n",
-      "Siberian Husky                    21.0\n",
-      "St Bernard                        70.0\n"
+     "ename": "NameError",
+     "evalue": "name 'dog_breeds' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\rjkar\\Documents\\Data Learning\\Learning\\notebooks\\exploring.ipynb Cell 9\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#We have already imported dog_breeds csv above using the read.csv() function : dog_breeds = pd.read_csv('dogbreeds_weight.csv', index_col = 0)\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m dogs \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(dog_breeds)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m#selecting data from the dog_breeds \u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m dogs\u001b[39m.\u001b[39mloc[\u001b[39m\"\u001b[39m\u001b[39mChihuahua\u001b[39m\u001b[39m\"\u001b[39m]  \u001b[39m#this is from pandas\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dog_breeds' is not defined"
      ]
     }
    ],
@@ -350,46 +308,146 @@
     "large_size = dogs[\"Weight\"] >= 20\n",
     "\n",
     "print(large_size)\n",
-    "print(dogs[large_size]) #square brackets used to use df which populates actual values rather than T or F (which above query populates) "
+    "print(dogs[large_size]) #square brackets used to use df which populates actual values rather than T or F (which above query populates) \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Breed'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3653\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3652\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3653\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\_libs\\index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\_libs\\index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Breed'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\rjkar\\Documents\\Data Learning\\Learning\\notebooks\\exploring.ipynb Cell 10\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Using matplotlib on dogs breeds data\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#Pandas and the csv file \"dog_breeds\" has been imported from last code sections.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(dog_breeds[\u001b[39m\"\u001b[39m\u001b[39mWeight\u001b[39m\u001b[39m\"\u001b[39m], dog_breeds[\u001b[39m\"\u001b[39;49m\u001b[39mBreed\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39mxlabel(\u001b[39m\"\u001b[39m\u001b[39mWeight (kg)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X14sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m plt\u001b[39m.\u001b[39mylabel(\u001b[39m\"\u001b[39m\u001b[39mDog Type\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3759\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3760\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3761\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3762\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3763\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3655\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3653\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3655\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3656\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3657\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3658\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3659\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3660\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Breed'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Weight'], dtype='object')\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Breed</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Akita</th>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alaskan Malamute</th>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>American Staffordshire Terrier</th>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australian Shepherd</th>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australian Kelpie</th>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Weight\n",
+       "Breed                                 \n",
+       "Akita                             40.0\n",
+       "Alaskan Malamute                  40.0\n",
+       "American Staffordshire Terrier    30.0\n",
+       "Australian Shepherd               20.0\n",
+       "Australian Kelpie                 20.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Using matplotlib on dogs breeds data\n",
-    "#Pandas and the csv file \"dog_breeds\" has been imported from last code sections.\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.plot(dog_breeds[\"Weight\"], dog_breeds[\"Breed\"])\n",
-    "plt.xlabel(\"Weight (kg)\")\n",
-    "plt.ylabel(\"Dog Type\")\n",
-    "plt.title(\"Dog Breeds by Weight\")\n",
-    "plt.show()   ### continue troubleshooting from here"
+    "#Adding new column to dog_breeds table - column which counts strings of dog breeds name\n",
+    "print(dog_breeds.columns)\n",
+    "\n",
+    "#for lab, row in dog_breeds.iterrows() :\n",
+    "   # dog_breeds.loc[lab, \"name_length\"] = len(row[\"Breed\"]) ----re-use this for lter\n",
+    "\n",
+    "dog_breeds.head() #As shown, there is no column name 'breed' . Need to adjust csv table to shift column up."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 5, 10)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#FUNCTIONS\n",
+    "\n",
+    "def math(value1, value2, value3) :\n",
+    "    '''Raise value1 to the power of value2 and add value3'''\n",
+    "    new_value = (value1 ** value2) + value3\n",
+    "    return(new_value)\n",
+    "\n",
+    "math(8,2,4) # This is an example of having multiple operations in a function.\n",
+    "\n",
+    "# Can populate multiple answers using multiple operations in a function using TUPLES\n",
+    "def math(value1, value2, value3) :\n",
+    "    '''(1) Raise value1 to the power of value2 and add value3, (2) value2 to power of value1, add value3, (3) value3 to power of value2, add value1'''\n",
+    "    new_value1 = (value1 ** value2) + value3\n",
+    "    new_value2 = (value2 ** value1) + value3\n",
+    "    new_value3 = (value3 ** value2) + value1\n",
+    "    new_tuple = (new_value1, new_value2, new_value3)\n",
+    "\n",
+    "    return(new_tuple)\n",
+    "\n",
+    "math(1, 2, 3) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
