Added height to dog_breeds df

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -46,30 +46,7 @@
      ]
     }
    ],
-   "source": [
-    "# Read in csv\n",
-    "df = pd.read_csv(file_path, encoding = \"ISO-8859-1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/rjkar/AppData/Local/Programs/Python/Python38/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -231,28 +208,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                Weight\n",
-      "Breed                                 \n",
-      "Akita                             40.0\n",
-      "Alaskan Malamute                  40.0\n",
-      "American Staffordshire Terrier    30.0\n",
-      "Australian Shepherd               20.0\n",
-      "Australian Kelpie                 20.0\n",
-      "...                                ...\n",
-      "Staffordshire Bull Terrier        14.0\n",
-      "Welshi Corgi                      11.0\n",
-      "West Highland White Terrier        8.0\n",
-      "Whippet                           12.0\n",
-      "Yorkshire Terrier                  2.5\n",
+      "                             Breed  Weight\n",
+      "0                            Akita    40.0\n",
+      "1                 Alaskan Malamute    40.0\n",
+      "2   American Staffordshire Terrier    30.0\n",
+      "3              Australian Shepherd    20.0\n",
+      "4                Australian Kelpie    20.0\n",
+      "..                             ...     ...\n",
+      "68      Staffordshire Bull Terrier    14.0\n",
+      "69                    Welshi Corgi    11.0\n",
+      "70     West Highland White Terrier     8.0\n",
+      "71                         Whippet    12.0\n",
+      "72               Yorkshire Terrier     2.5\n",
       "\n",
-      "[73 rows x 1 columns]\n"
+      "[73 rows x 2 columns]\n",
+      "                            Breed  Weight\n",
+      "0                           Akita    40.0\n",
+      "1                Alaskan Malamute    40.0\n",
+      "2  American Staffordshire Terrier    30.0\n",
+      "3             Australian Shepherd    20.0\n",
+      "4               Australian Kelpie    20.0\n",
+      "                             Breed  Weight  num_characters\n",
+      "0                            Akita    40.0               5\n",
+      "1                 Alaskan Malamute    40.0              16\n",
+      "2   American Staffordshire Terrier    30.0              30\n",
+      "3              Australian Shepherd    20.0              19\n",
+      "4                Australian Kelpie    20.0              17\n",
+      "..                             ...     ...             ...\n",
+      "68      Staffordshire Bull Terrier    14.0              26\n",
+      "69                    Welshi Corgi    11.0              12\n",
+      "70     West Highland White Terrier     8.0              27\n",
+      "71                         Whippet    12.0               7\n",
+      "72               Yorkshire Terrier     2.5              17\n",
+      "\n",
+      "[73 rows x 3 columns]\n",
+      "                             Breed  Weight  num_characters  Height\n",
+      "0                            Akita    40.0               5    26.0\n",
+      "1                 Alaskan Malamute    40.0              16    25.0\n",
+      "2   American Staffordshire Terrier    30.0              30    19.0\n",
+      "3              Australian Shepherd    20.0              19    23.0\n",
+      "4                Australian Kelpie    20.0              17    19.0\n",
+      "..                             ...     ...             ...     ...\n",
+      "68      Staffordshire Bull Terrier    14.0              26    18.0\n",
+      "69                     Welsh Corgi    11.0              12    12.0\n",
+      "70     West Highland White Terrier     8.0              27    11.0\n",
+      "71                         Whippet    12.0               7    21.0\n",
+      "72               Yorkshire Terrier     2.5              17     9.0\n",
+      "\n",
+      "[73 rows x 4 columns]\n"
      ]
     }
    ],
@@ -261,150 +271,83 @@
     "\n",
     "\n",
     "import numpy as np\n",
-    "\n",
+    "import pandas as pd\n",
     "\n",
     "#import csv data as DataFrame - did this by dragging and dropping the csv file to Explorer on left, copied relative path into code below.\n",
-    "dog_breeds = pd.read_csv('dogbreeds_weight.csv', index_col = 0) #index_col is to remove the fist automatic column\n",
+    "dog_breeds = pd.read_csv('dogbreeds_weight.csv') \n",
+    "row_index = 0 #index_col is to remove the fist automatic column\n",
     "print(dog_breeds)  \n",
     "\n",
     "dog_breeds[0:4]  #Testing with slicers\n",
     "\n",
-    "np_dogbreeds = np.array(dog_breeds)  #convert csv data into NumPy arrays\n",
-    "#np_dogbreeds[0,1]  #CANNOT use slicer functions as it only applies to Lists\n",
-    "#np_dogbreeds[:]   #as above\n",
-    "#print(np_dogbreeds[50])  #again, same as above - appears np is more suitable to Lists\n",
+    "print(dog_breeds.head())\n",
     "\n",
-    "\n"
+    "#Sort Weight by descending order\n",
+    "dog_breeds.sort_values(\"Weight\", ascending=False)\n",
+    "\n",
+    "#Add new column - number of characters in 'Breed' string.\n",
+    "dog_breeds[\"num_characters\"] = dog_breeds[\"Breed\"].str.len()\n",
+    "print(dog_breeds)\n",
+    "\n",
+    "#Fix 'Welshi Corgi' to 'Welsh Corgi' \n",
+    "dog_breeds[\"Breed\"] = dog_breeds[\"Breed\"].str.replace(\"Welshi Corgi\", \"Welsh Corgi\")\n",
+    "\n",
+    "#Add new column - height - to dog_breed DataFrame\n",
+    "new_height = [26, 25, 19, 23, 19, 10.2, 33, 11, 15, 16, 27.5, 11.5, 25, 22, 17, 25, 14, 12, 22, 22, 13, 9, 10, 20, 16, 26, 9, 23, 28, 17, 20, 15.5, 27, 12, 20, 26, 24, 30, 25, 18, 15, 16, 13, 22.5, 11, 9, 22, 12, 13, 29, 11, 9, 11, 9, 15, 12, 14, 27, 23.5, 14, 19.5, 26, 10, 16, 16.5, 10.5, 23.5, 30, 18, 12, 11, 21, 9]\n",
+    "dog_breeds[\"Height\"] = new_height\n",
+    "print(dog_breeds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dog_breeds' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\rjkar\\Documents\\Data Learning\\Learning\\notebooks\\exploring.ipynb Cell 9\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#We have already imported dog_breeds csv above using the read.csv() function : dog_breeds = pd.read_csv('dogbreeds_weight.csv', index_col = 0)\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m dogs \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(dog_breeds)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m#selecting data from the dog_breeds \u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m dogs\u001b[39m.\u001b[39mloc[\u001b[39m\"\u001b[39m\u001b[39mChihuahua\u001b[39m\u001b[39m\"\u001b[39m]  \u001b[39m#this is from pandas\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dog_breeds' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "#We have already imported dog_breeds csv above using the read.csv() function : dog_breeds = pd.read_csv('dogbreeds_weight.csv', index_col = 0)\n",
-    "dogs = pd.DataFrame(dog_breeds)\n",
-    "\n",
-    "#selecting data from the dog_breeds \n",
-    "dogs.loc[\"Chihuahua\"]  #this is from pandas\n",
-    "dogs.loc[[\"Miniature Schnauzer\", \"Standard Schnauzer\", \"Giant Schnauzer\"]] #double brackets to get in df - so much neater!\n",
-    "\n",
-    "small_size = dogs[\"Weight\"] < 10\n",
-    "medium_size = np.logical_and(dogs[\"Weight\"] >= 10, dogs[\"Weight\"] < 20)\n",
-    "large_size = dogs[\"Weight\"] >= 20\n",
-    "\n",
-    "print(large_size)\n",
-    "print(dogs[large_size]) #square brackets used to use df which populates actual values rather than T or F (which above query populates) \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Weight'], dtype='object')\n"
-     ]
-    },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Weight</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Breed</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Akita</th>\n",
-       "      <td>40.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alaskan Malamute</th>\n",
-       "      <td>40.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>American Staffordshire Terrier</th>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Australian Shepherd</th>\n",
-       "      <td>20.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Australian Kelpie</th>\n",
-       "      <td>20.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                Weight\n",
-       "Breed                                 \n",
-       "Akita                             40.0\n",
-       "Alaskan Malamute                  40.0\n",
-       "American Staffordshire Terrier    30.0\n",
-       "Australian Shepherd               20.0\n",
-       "Australian Kelpie                 20.0"
+       "(                             Breed  Weight\n",
+       " 2   American Staffordshire Terrier    30.0\n",
+       " 5         Australian Silky Terrier     4.0\n",
+       " 7               Australian Terrier     6.5\n",
+       " 14                  Boston Terrier     8.0\n",
+       " 18                    Bull Terrier    25.0\n",
+       " 31                     Fox Terrier     7.5\n",
+       " 39                   Irish Terrier    12.0\n",
+       " 40            Jack Russell Terrier     6.5\n",
+       " 48                 Norfolk Terrier     6.0\n",
+       " 62                Scottish Terrier     9.0\n",
+       " 68      Staffordshire Bull Terrier    14.0\n",
+       " 70     West Highland White Terrier     8.0\n",
+       " 72               Yorkshire Terrier     2.5,\n",
+       " 0      True\n",
+       " 1      True\n",
+       " 2      True\n",
+       " 3      True\n",
+       " 4      True\n",
+       "       ...  \n",
+       " 68     True\n",
+       " 69     True\n",
+       " 70    False\n",
+       " 71     True\n",
+       " 72    False\n",
+       " Name: Weight, Length: 73, dtype: bool)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Adding new column to dog_breeds table - column which counts strings of dog breeds name\n",
-    "print(dog_breeds.columns)\n",
+    "#Subset rows that meet multiple conditions\n",
     "\n",
-    "#for lab, row in dog_breeds.iterrows() :\n",
-    "   # dog_breeds.loc[lab, \"name_length\"] = len(row[\"Breed\"]) ----re-use this for lter\n",
-    "\n",
-    "dog_breeds.head() #As shown, there is no column name 'breed' . Need to adjust csv table to shift column up."
+    "dog_breeds[(dog_breeds[\"Breed\"].str.contains(\"Terrier\"))], (dog_breeds[\"Weight\"] > 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +356,7 @@
        "(4, 5, 10)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
