--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -208,42 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             Breed  Weight  Height       BMI\n",
-      "0                            Akita    40.0    26.0  1.538462\n",
-      "1                 Alaskan Malamute    40.0    25.0  1.600000\n",
-      "2   American Staffordshire Terrier    30.0    19.0  1.578947\n",
-      "3              Australian Shepherd    20.0    23.0  0.869565\n",
-      "4                Australian Kelpie    20.0    19.0  1.052632\n",
-      "..                             ...     ...     ...       ...\n",
-      "68      Staffordshire Bull Terrier    14.0    18.0  0.777778\n",
-      "69                     Welsh Corgi    11.0    12.0  0.916667\n",
-      "70     West Highland White Terrier     8.0    11.0  0.727273\n",
-      "71                         Whippet    12.0    21.0  0.571429\n",
-      "72               Yorkshire Terrier     2.5     9.0  0.277778\n",
-      "\n",
-      "[73 rows x 4 columns]\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'False: boolean label can not be used without a boolean index'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\rjkar\\Documents\\Data Learning\\Learning\\notebooks\\exploring.ipynb Cell 7\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W6sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W6sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m is mid but not a bad choice can\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt decide\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W6sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m \u001b[39mprint\u001b[39m(which_dog(\u001b[39m'\u001b[39;49m\u001b[39mAkita\u001b[39;49m\u001b[39m'\u001b[39;49m))   \u001b[39m##Error here because no BMI input. Need to modify so can input breed name.\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\rjkar\\Documents\\Data Learning\\Learning\\notebooks\\exploring.ipynb Cell 7\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W6sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwhich_dog\u001b[39m(x) : \n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W6sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     breed_info \u001b[39m=\u001b[39m dog_breeds\u001b[39m.\u001b[39;49mloc[\u001b[39m'\u001b[39;49m\u001b[39mbreed_name\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m==\u001b[39;49m x]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W6sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m     breed_bmi \u001b[39m=\u001b[39m breed_info[\u001b[39m'\u001b[39m\u001b[39mBMI\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/rjkar/Documents/Data%20Learning/Learning/notebooks/exploring.ipynb#W6sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m     \u001b[39mif\u001b[39;00m breed_bmi \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1.2\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\indexing.py:1103\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1100\u001b[0m axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39mor\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m   1102\u001b[0m maybe_callable \u001b[39m=\u001b[39m com\u001b[39m.\u001b[39mapply_if_callable(key, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj)\n\u001b[1;32m-> 1103\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_axis(maybe_callable, axis\u001b[39m=\u001b[39;49maxis)\n",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\indexing.py:1342\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1339\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39miloc[\u001b[39mtuple\u001b[39m(indexer)]\n\u001b[0;32m   1341\u001b[0m \u001b[39m# fall thru to straight lookup\u001b[39;00m\n\u001b[1;32m-> 1342\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_key(key, axis)\n\u001b[0;32m   1343\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_label(key, axis\u001b[39m=\u001b[39maxis)\n",
-      "File \u001b[1;32mc:\\Users\\rjkar\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\indexing.py:1151\u001b[0m, in \u001b[0;36m_LocIndexer._validate_key\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1144\u001b[0m ax \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_axis(axis)\n\u001b[0;32m   1145\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mbool\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m (\n\u001b[0;32m   1146\u001b[0m     is_bool_dtype(ax)\n\u001b[0;32m   1147\u001b[0m     \u001b[39mor\u001b[39;00m ax\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mboolean\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1148\u001b[0m     \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(ax, MultiIndex)\n\u001b[0;32m   1149\u001b[0m     \u001b[39mand\u001b[39;00m is_bool_dtype(ax\u001b[39m.\u001b[39mget_level_values(\u001b[39m0\u001b[39m))\n\u001b[0;32m   1150\u001b[0m ):\n\u001b[1;32m-> 1151\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\n\u001b[0;32m   1152\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m: boolean label can not be used without a boolean index\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1153\u001b[0m     )\n\u001b[0;32m   1155\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mslice\u001b[39m) \u001b[39mand\u001b[39;00m (\n\u001b[0;32m   1156\u001b[0m     \u001b[39misinstance\u001b[39m(key\u001b[39m.\u001b[39mstart, \u001b[39mbool\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(key\u001b[39m.\u001b[39mstop, \u001b[39mbool\u001b[39m)\n\u001b[0;32m   1157\u001b[0m ):\n\u001b[0;32m   1158\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m: boolean values can not be used in a slice\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'False: boolean label can not be used without a boolean index'"
+      "Alaskan Malamute is massive - re-consider your option\n"
      ]
     }
    ],
@@ -279,24 +251,21 @@
     "dog_breeds = dog_breeds[[\"Breed\", \"Weight\", \"Height\", \"num_characters\"]]\n",
     "\n",
     "#Calculate dog BMI (Weight/Height) in a new column (1) First subset rows to only include Breed, Height and Weight columns. Name this new table Dog_BMI\n",
-    "dog_bmi = dog_breeds[['Breed', 'Weight', 'Height']]\n",
-    "dog_bmi['BMI'] = dog_bmi['Weight'] / dog_bmi['Height']\n",
-    "print(dog_bmi)\n",
+    "dog_breeds['BMI'] = dog_breeds['Weight'] / dog_breeds['Height']\n",
     "\n",
     "#Write query where if you input a dog breed, it prints out '\"Breed\" is \"smol\"/\"mid\"/\"massive\"'\n",
-    "x = dog_breeds.loc[:, ['Breed']]\n",
     "\n",
-    "def which_dog(x) : \n",
-    "    breed_info = dog_breeds.loc['breed_name' == x]\n",
-    "    breed_bmi = breed_info['BMI']\n",
-    "    if breed_bmi >= 1.2:\n",
+    "def which_dog(x) :\n",
+    "\n",
+    "    breed_BMI = dog_breeds.loc[dog_breeds['Breed'] == x, 'BMI'].values[0]\n",
+    "    if breed_BMI >= 1.2:\n",
     "        return f\"{x} is massive - re-consider your option\"\n",
-    "    elif breed_bmi < 0.6:\n",
+    "    elif breed_BMI < 0.6:\n",
     "        return f\"{x} is smol\"\n",
     "    else:\n",
     "        return f\"{x} is mid but not a bad choice can't decide\"\n",
     "\n",
-    "print(which_dog('Akita'))   ##Error here because no BMI input. Need to modify so can input breed name."
+    "print(which_dog('Alaskan Malamute')) "
    ]
   },
   {
@@ -385,13 +354,6 @@
     "math(1, 2, 3) \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
